--- a/trunk/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/trunk/src/BigVisibleCruise/SettingsWindow.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Properties="clr-namespace:BigVisibleCruise.Properties;assembly="
     xmlns:Converters="clr-namespace:BigVisibleCruise.Converters;assembly="
+    xmlns:BigVisibleCruise_Properties="clr-namespace:BigVisibleCruise.Properties"
     x:Class="BigVisibleCruise.SettingsWindow"
     Title="Settings" SizeToContent="WidthAndHeight" ShowInTaskbar="False"
     Icon="Cinema-Display-graphite.ico" ResizeMode="NoResize"
@@ -11,6 +12,7 @@
 	<Window.Resources>
 		<Converters:TimeSpanToDoubleConverter x:Key="TimeSpanToDoubleConverter" />
 		<Converters:SliderValueInSecondsToReadableTimeFormatConverter x:Key="SliderValueInSecondsToReadableTimeFormatConverter" />
+		<Converters:CruiseDashboardToStatusUrlConverter x:Key="CruiseDashboardToStatusUrlConverter" />
 	</Window.Resources>
 
 
@@ -34,8 +36,8 @@
 
 			<Label Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" FontSize="16" Height="Auto" HorizontalAlignment="Stretch" Foreground="White" Background="Black"   FontWeight="Bold"  Padding="10,10,10,10" FontFamily="Segoe Script, Verdana" VerticalAlignment="Center" Content="Big Visible Cruise Settings"/>
 
-			<Label Grid.Column="0" Grid.Row="1" Height="25" Margin="2,5,2,5" Content="Status Url"/>
-			<TextBox Grid.Column="1" Grid.Row="1"  Height="25" Margin="2,5,2,5" Text="{Binding Source={x:Static Properties:Settings.Default}, Path=Dashboard, Mode=TwoWay}"/>			
+			<Label Grid.Column="0" Grid.Row="1" Height="25" Margin="2,5,2,5" Content="Dashboard Url"/>
+			<TextBox Text="{Binding Path=Dashboard, Converter={StaticResource CruiseDashboardToStatusUrlConverter}, Mode=TwoWay, Source={x:Static BigVisibleCruise_Properties:Settings.Default}}" Margin="2,5,2,5" Grid.Column="1" Grid.Row="1"/>			
 			
 			<Label Grid.Column="0" Grid.Row="2" Height="25" Margin="2,5,2,5" VerticalAlignment="Top" Content="Auto Refresh Rate"/>
 			<Label Grid.Column="1" Grid.Row="2" Height="25" Margin="2,5,2,5" Foreground="Gray" Content="{Binding ElementName=RefreshSlider, Path=Value, Converter={StaticResource SliderValueInSecondsToReadableTimeFormatConverter}}" />			
@@ -50,13 +52,10 @@
 			</ComboBox>
 
 			<DockPanel HorizontalAlignment="Right" Margin="0,10,0,0" Width="Auto" LastChildFill="False" Grid.Column="1" Grid.Row="5" VerticalAlignment="Stretch" Grid.ColumnSpan="1">
-				
 				<TextBlock DockPanel.Dock="Left"  Padding="10,1,10,1" Margin="2,5,10,5" FontStyle="Italic">
 					<Hyperlink Click="Cancel_Click">Cancel</Hyperlink>
 				</TextBlock>				
-
 				<Button DockPanel.Dock="Right" Click="SaveConfigurationSettings_Click" Content="Save Settings" IsDefault="True" Margin="2,5,2,5" Padding="10,1,10,1"/>
-
 			</DockPanel>
 
 		</Grid>
