--- a/trunk/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/trunk/src/BigVisibleCruise/SettingsWindow.xaml
@@ -3,7 +3,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Properties="clr-namespace:BigVisibleCruise.Properties;assembly="
     xmlns:Converters="clr-namespace:BigVisibleCruise.Converters;assembly="
+	xmlns:Validations="clr-namespace:BigVisibleCruise.Validations;assembly="
     xmlns:BigVisibleCruise_Properties="clr-namespace:BigVisibleCruise.Properties"
+    xmlns:BigVisibleCruise_Validations="clr-namespace:BigVisibleCruise.Validations"
     x:Class="BigVisibleCruise.SettingsWindow"
     Title="Settings" SizeToContent="WidthAndHeight" ShowInTaskbar="False"
     Icon="Cinema-Display-graphite.ico" ResizeMode="NoResize"
@@ -13,6 +15,18 @@
 		<Converters:TimeSpanToDoubleConverter x:Key="TimeSpanToDoubleConverter" />
 		<Converters:SliderValueInSecondsToReadableTimeFormatConverter x:Key="SliderValueInSecondsToReadableTimeFormatConverter" />
 		<Converters:CruiseDashboardToStatusUrlConverter x:Key="CruiseDashboardToStatusUrlConverter" />
+
+		<Style x:Key="TextBoxWithValidation" TargetType="{x:Type TextBox}">
+			<Style.Triggers>
+				<Trigger Property="Validation.HasError" Value="true">
+					<Setter Property="Background" Value="Red" />
+					<Setter Property="ToolTip"
+					  Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                        Path=(Validation.Errors)[0].ErrorContent}"/>
+				</Trigger>			
+			</Style.Triggers>
+		</Style>
+		
 	</Window.Resources>
 
 
@@ -37,7 +51,13 @@
 			<Label Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" FontSize="16" Height="Auto" HorizontalAlignment="Stretch" Foreground="White" Background="Black"   FontWeight="Bold"  Padding="10,10,10,10" FontFamily="Segoe Script, Verdana" VerticalAlignment="Center" Content="Big Visible Cruise Settings"/>
 
 			<Label Grid.Column="0" Grid.Row="1" Height="25" Margin="2,5,2,5" Content="Dashboard Url"/>
-			<TextBox Text="{Binding Path=Dashboard, Converter={StaticResource CruiseDashboardToStatusUrlConverter}, Mode=TwoWay, Source={x:Static BigVisibleCruise_Properties:Settings.Default}}" Margin="2,5,2,5" Grid.Column="1" Grid.Row="1"/>			
+			<TextBox Grid.Column="1" Grid.Row="1" Style="{StaticResource TextBoxWithValidation}" Height="25">
+				<Binding Path="Dashboard" UpdateSourceTrigger="LostFocus" Mode="TwoWay" Source="{x:Static BigVisibleCruise_Properties:Settings.Default}" Converter="{StaticResource CruiseDashboardToStatusUrlConverter}">
+					<Binding.ValidationRules>
+						<BigVisibleCruise_Validations:DashboardUrlValidationRule />
+					</Binding.ValidationRules>
+				</Binding>
+			</TextBox>				
 			
 			<Label Grid.Column="0" Grid.Row="2" Height="25" Margin="2,5,2,5" VerticalAlignment="Top" Content="Auto Refresh Rate"/>
 			<Label Grid.Column="1" Grid.Row="2" Height="25" Margin="2,5,2,5" Foreground="Gray" Content="{Binding ElementName=RefreshSlider, Path=Value, Converter={StaticResource SliderValueInSecondsToReadableTimeFormatConverter}}" />			
@@ -57,6 +77,8 @@
 				</TextBlock>				
 				<Button DockPanel.Dock="Right" Click="SaveConfigurationSettings_Click" Content="Save Settings" IsDefault="True" Margin="2,5,2,5" Padding="10,1,10,1"/>
 			</DockPanel>
+
+
 
 		</Grid>
 
