--- a/trunk/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/trunk/src/BigVisibleCruise/SettingsWindow.xaml
@@ -15,17 +15,43 @@
 		<Converters:TimeSpanToDoubleConverter x:Key="TimeSpanToDoubleConverter" />
 		<Converters:SliderValueInSecondsToReadableTimeFormatConverter x:Key="SliderValueInSecondsToReadableTimeFormatConverter" />
 		<Converters:CruiseDashboardToStatusUrlConverter x:Key="CruiseDashboardToStatusUrlConverter" />
+		<Converters:BooleanToVisibleConverter x:Key="BooleanToVisibleConverter" />
 
 		<Style x:Key="TextBoxWithValidation" TargetType="{x:Type TextBox}">
+			<Setter Property="Validation.ErrorTemplate">
+				<Setter.Value>
+					<ControlTemplate>
+						<AdornedElementPlaceholder Name="MyAdorner" />
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
 			<Style.Triggers>
 				<Trigger Property="Validation.HasError" Value="true">
-					<Setter Property="Background" Value="LightGray" />
-					<Setter Property="ToolTip"
-					  Value="{Binding RelativeSource={x:Static RelativeSource.Self},
-                        Path=(Validation.Errors)[0].ErrorContent}"/>
-				</Trigger>			
+					<Setter Property="Background" Value="Red" />
+				</Trigger>
 			</Style.Triggers>
 		</Style>
+		
+<!--		<Style TargetType="{x:Type TextBox}">-->
+<!--			<Setter Property="Validation.ErrorTemplate">-->
+<!--				<Setter.Value>-->
+<!--					<ControlTemplate>-->
+<!--						<DockPanel LastChildFill="True">-->
+<!--							<TextBlock DockPanel.Dock="Right"-->
+<!--							  Foreground="Red"-->
+<!--							  Margin="5"-->
+<!--							  FontSize="8pt"-->
+<!--							  Text="{Binding ElementName=MyAdorner,-->
+<!--                               Path=AdornedElement.(Validation.Errors)[0].ErrorContent}">-->
+<!--							</TextBlock>-->
+<!--							<Border BorderBrush="Red" BorderThickness="1">-->
+<!--								<AdornedElementPlaceholder Name="MyAdorner" />-->
+<!--							</Border>-->
+<!--						</DockPanel>-->
+<!--					</ControlTemplate>-->
+<!--				</Setter.Value>-->
+<!--			</Setter>-->
+<!--		</Style>-->
 
 	</Window.Resources>
 
@@ -51,13 +77,17 @@
 			<Label Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" FontSize="16" Height="Auto" HorizontalAlignment="Stretch" Foreground="White" Background="Black"   FontWeight="Bold"  Padding="10,10,10,10" FontFamily="Segoe Script, Verdana" VerticalAlignment="Center" Content="Big Visible Cruise Settings"/>
 
 			<Label Grid.Column="0" Grid.Row="1" Height="25" Margin="2,5,2,5" Content="Dashboard Url"/>
-			<TextBox Grid.Column="1" Grid.Row="1" Style="{StaticResource TextBoxWithValidation}" Height="25">
-				<Binding Path="Dashboard" UpdateSourceTrigger="LostFocus" Mode="TwoWay" Source="{x:Static BigVisibleCruise_Properties:Settings.Default}" Converter="{StaticResource CruiseDashboardToStatusUrlConverter}">
-					<Binding.ValidationRules>
-						<BigVisibleCruise_Validations:DashboardUrlValidationRule />
-					</Binding.ValidationRules>
-				</Binding>
-			</TextBox>				
+			<DockPanel Grid.Column="1" Grid.Row="1" LastChildFill="True">
+				<Image DockPanel.Dock="Right" Source="check.png" Visibility="{Binding Path=(Validation.HasError), ElementName=UrlTextBox, Converter={StaticResource BooleanToVisibleConverter}, ConverterParameter=false}" Height="25" Width="25" Margin="10,0,0,0" />
+				<Image DockPanel.Dock="Right" Source="stop.png" Visibility="{Binding Path=(Validation.HasError), ElementName=UrlTextBox, Converter={StaticResource BooleanToVisibleConverter}}" Height="25" Width="25" Margin="10,0,0,0" />				
+				<TextBox Name="UrlTextBox" Style="{StaticResource TextBoxWithValidation}" Height="25" Width="350">
+					<Binding Path="Dashboard" UpdateSourceTrigger="LostFocus" Mode="TwoWay" Source="{x:Static BigVisibleCruise_Properties:Settings.Default}" Converter="{StaticResource CruiseDashboardToStatusUrlConverter}">
+						<Binding.ValidationRules>
+							<BigVisibleCruise_Validations:DashboardUrlValidationRule />
+						</Binding.ValidationRules>
+					</Binding>
+				</TextBox>
+			</DockPanel>			
 			
 			<Label Grid.Column="0" Grid.Row="2" Height="25" Margin="2,5,2,5" VerticalAlignment="Top" Content="Auto Refresh Rate"/>
 			<Label Grid.Column="1" Grid.Row="2" Height="25" Margin="2,5,2,5" Foreground="Gray" Content="{Binding ElementName=RefreshSlider, Path=Value, Converter={StaticResource SliderValueInSecondsToReadableTimeFormatConverter}}" />			
@@ -77,8 +107,6 @@
 				</TextBlock>				
 				<Button DockPanel.Dock="Right" Click="SaveConfigurationSettings_Click" Content="Save Settings" IsDefault="True" Margin="2,5,2,5" Padding="10,1,10,1"/>
 			</DockPanel>
-
-
 
 		</Grid>
 
