--- a/trunk/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/trunk/src/BigVisibleCruise/SettingsWindow.xaml
@@ -76,9 +76,17 @@
 					Value="{Binding Source={x:Static Properties:Settings.Default}, Path=PollFrequency, Converter={StaticResource TimeSpanToDoubleConverter}, Mode=TwoWay}" />
 
 			<Label Grid.Column="0" Grid.Row="4" Height="25" Margin="2,5,2,5" Content="Skin"/>
-			<ComboBox Grid.Column="1" Grid.Row="4" Height="25" Margin="2,5,2,5" SelectedValue="{Binding Source={x:Static Properties:Settings.Default}, Path=Skin, Mode=TwoWay}" SelectedValuePath="Tag">
-				<ComboBoxItem Tag="LiveStackedStatus">Stacked</ComboBoxItem>
-				<ComboBoxItem Tag="LiveUniformStatus">Grid</ComboBoxItem>
+			<ComboBox Grid.Column="1" Grid.Row="4" Margin="2,5,2,5" SelectedValue="{Binding Source={x:Static Properties:Settings.Default}, Path=Skin, Mode=TwoWay}" SelectedValuePath="Tag">
+				<ComboBoxItem Tag="LiveStackedStatus" Content="Stacked">
+					<ComboBoxItem.ToolTip>
+						<Image Source="stacked.png" />
+					</ComboBoxItem.ToolTip>		
+				</ComboBoxItem>
+				<ComboBoxItem Tag="LiveUniformStatus" Content="Uniform Grid">
+					<ComboBoxItem.ToolTip>
+						<Image Source="grid.png" />
+					</ComboBoxItem.ToolTip>
+				</ComboBoxItem>
 			</ComboBox>
 
 			<DockPanel HorizontalAlignment="Right" Margin="0,10,0,0" Width="Auto" LastChildFill="False" Grid.Column="1" Grid.Row="5" VerticalAlignment="Stretch" Grid.ColumnSpan="1">
